Fix text width on mobile

--- a/global.css
+++ b/global.css
@@ -194,7 +194,7 @@ footer {
     }
 
     .content p {
-        max-width: 24ch;
+        max-width: 32ch;
     }
 
     footer {
